refactor: QuestionPayment, QuestionPaymentOrder 구조 변경